# bayan

./: CMakeLists.txt  README.MD  block_hash.cpp  block_hash.h  main.cpp  parse_command_line.cpp  parse_command_line.h  process.cpp  process.h  settings.h
.github/workflows/: workflow.yml
